--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
@@ -8,7 +8,7 @@
 	z-index: 2;
 	position: fixed;
 	top: v.$search-filter-sort-and-top-bar-top;
-	border: v.$top-bar-border-width solid black;
+	border: v.$top-bar-border-width solid v.$mode-top-bar-border-color-light;
 	border-width: v.$top-bar-border-width 0 v.$item-container-list-sidebar-border-width 0;
 	background-color: v.$mode-top-bar-background-color-light;
 	height: v.$top-bar-height;
@@ -47,7 +47,7 @@
 		border: v.$top-bar-button-border-width solid black;
 		border-radius: v.$search-top-bar-buttton-border-radius 0 0 v.$search-top-bar-buttton-border-radius;
 		padding: 0px v.$list-item-search-bar-padding 0px v.$list-item-search-bar-padding;
-		background-color: v.$mode-top-bar-background-color-search-bar-light;
+		background-color: v.$mode-top-bar-search-bar-background-color-light;
 		height: v.$list-item-search-bar-height;
 		width: v.$item-search-bar-width - v.$list-item-search-bar-button-width;
 		font-size: v.$list-item-search-bar-font-size;
@@ -100,12 +100,12 @@
 		z-index: 1;
 		position: absolute;
 		top: 9px;
-		border: v.$search-top-bar-base-button-border-width solid v.$mode-top-bar-border-color-button-light;
+		border: v.$search-top-bar-base-button-border-width solid v.$mode-top-bar-button-border-color-light;
 		border-radius: v.$search-top-bar-buttton-border-radius;
-		background-color: v.$mode-top-bar-background-color-button-light;
+		background-color: v.$mode-top-bar-button-background-color-light;
 		height: v.$top-bar-button-height;
 		width: v.$top-bar-sort-button-width;
-		color: v.$mode-top-bar-text-color-button-light;
+		color: v.$mode-top-bar-button-text-color-light;
 		font-size: v.$top-bar-filter-button-font-size;
 		text-align: center;
 		cursor: pointer;
@@ -250,7 +250,7 @@
 		cursor: pointer;
 
 		&:hover,
-		&:active {
+		:active {
 			color: v.$mode-base-icon-button-hover-text-color-light;
 		}
 	}
@@ -290,7 +290,7 @@
 		cursor: pointer;
 
 		&:hover,
-		&:active {
+		:active {
 			background-color: v.$mode-item-view-top-bar-options-dropdown-row-hover-background-color-light;
 		}
 	}
