--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -3,6 +3,8 @@
 
 /* html,
 body, */
+html,
+body,
 .app-component,
 .js-calc-app-component {
 	width: 100%;
@@ -90,34 +92,36 @@ body, */
 		color: v.$mode-universal-text-grayed-out-text-color-dark;
 	}
 
-	// Light/Dark mode background colors for TopBar
-	.js-set-top-bar-background-color-dark-mode-false {
+	// Light/Dark mode border and background colors for TopBar
+	.js-set-top-bar-border-and-background-color-dark-mode-false {
+		border-color: v.$mode-top-bar-border-color-light;
 		background-color: v.$mode-top-bar-background-color-light;
 	}
-	.js-set-top-bar-background-color-dark-mode-true {
+	.js-set-top-bar-border-and-background-color-dark-mode-true {
+		border-color: v.$mode-top-bar-border-color-dark;
 		background-color: v.$mode-top-bar-background-color-dark;
-	}
-
-	// Light/Dark mode background and text colors for TopBar search-bar
-	.js-set-top-bar-search-bar-background-text-color-dark-mode-false {
-		background-color: v.$mode-top-bar-background-color-search-bar-light;
-		color: v.$mode-top-bar-text-color-search-bar-light;
-	}
-	.js-set-top-bar-search-bar-background-text-color-dark-mode-true {
-		background-color: v.$mode-top-bar-background-color-search-bar-dark;
-		color: v.$mode-top-bar-text-color-search-bar-dark;
 	}
 
 	// Light/Dark mode border, background, and text color for TopBar buttons
 	.js-set-top-bar-button-border-background-text-color-dark-mode-false {
-		border-color: v.$mode-top-bar-border-color-button-light;
-		background-color: v.$mode-top-bar-background-color-button-light;
-		color: v.$mode-top-bar-text-color-button-light;
+		border-color: v.$mode-top-bar-button-border-color-light;
+		background-color: v.$mode-top-bar-button-background-color-light;
+		color: v.$mode-top-bar-button-text-color-light;
 	}
 	.js-set-top-bar-button-border-background-text-color-dark-mode-true {
-		border-color: v.$mode-top-bar-border-color-button-dark;
-		background-color: v.$mode-top-bar-background-color-button-dark;
-		color: v.$mode-top-bar-text-color-button-dark;
+		border-color: v.$mode-top-bar-button-border-color-dark;
+		background-color: v.$mode-top-bar-button-background-color-dark;
+		color: v.$mode-top-bar-button-text-color-dark;
+	}
+
+	// Light/Dark mode background and text colors for TopBar search-bar
+	.js-set-top-bar-search-bar-background-text-color-dark-mode-false {
+		background-color: v.$mode-top-bar-search-bar-background-color-light;
+		color: v.$mode-top-bar-search-bar-text-color-light;
+	}
+	.js-set-top-bar-search-bar-background-text-color-dark-mode-true {
+		background-color: v.$mode-top-bar-search-bar-background-color-dark;
+		color: v.$mode-top-bar-search-bar-text-color-dark;
 	}
 
 	// Light/Dark mode text colors with hover for base icon-buttons
@@ -125,7 +129,7 @@ body, */
 		color: v.$mode-base-icon-button-text-color-light;
 
 		&:hover,
-		&:active {
+		:active {
 			color: v.$mode-base-icon-button-hover-text-color-light;
 		}
 	}
@@ -133,7 +137,7 @@ body, */
 		color: v.$mode-base-icon-button-text-color-dark;
 
 		&:hover,
-		&:active {
+		:active {
 			color: v.$mode-base-icon-button-hover-text-color-dark;
 		}
 	}
@@ -143,7 +147,7 @@ body, */
 		color: v.$mode-more-distinct-icon-button-text-color-light;
 
 		&:hover,
-		&:active {
+		:active {
 			color: v.$mode-more-distinct-icon-button-hover-text-color-light;
 		}
 	}
@@ -151,7 +155,7 @@ body, */
 		color: v.$mode-more-distinct-icon-button-text-color-dark;
 
 		&:hover,
-		&:active {
+		:active {
 			color: v.$mode-more-distinct-icon-button-hover-text-color-dark;
 		}
 	}
@@ -164,19 +168,31 @@ body, */
 		background-color: v.$mode-create-item-sidebar-background-color-dark;
 	}
 
-	// Light/Dark mode border, background, and text color for base form-input
-	.js-set-create-item-sidebar-form-input-border-background-text-border-text-color-dark-mode-false {
+	// Light/Dark mode border, background, and text color for for CreateItemSidebar base form-input
+	.js-set-create-item-sidebar-form-input-border-background-text-border-text-color-focus-box-shadow-dark-mode-false {
 		border-color: v.$mode-create-item-form-input-border-color-light;
 		background-color: v.$mode-create-item-form-input-background-color-light;
 		color: v.$mode-home-text-color-light;
+
+		&:focus {
+			box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+		}
 	}
-	.js-set-create-item-sidebar-form-input-border-background-text-border-text-color-dark-mode-true {
+	.js-set-create-item-sidebar-form-input-border-background-text-border-text-color-focus-box-shadow-dark-mode-true {
 		border-color: v.$mode-create-item-form-input-border-color-dark;
 		background-color: v.$mode-create-item-form-input-background-color-dark;
 		color: v.$mode-home-text-color-dark;
+
+		&:focus {
+			box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-dark;
+			-moz-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-dark;
+			-webkit-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-dark;
+		}
 	}
 
-	// Light/Dark mode disabled base label
+	// Light/Dark mode CreateItemSidebar disabled base label 
 	.js-set-create-item-sidebar-diabled-label-dark-mode-false {
 		color: v.$mode-create-item-form-input-disabled-text-color-light;
 		pointer-events: none;
@@ -186,18 +202,32 @@ body, */
 		pointer-events: none;
 	}
 
-	// Light/Dark mode disables base input date
+	// Light/Dark mode CreateItemSidebar disabled base input date
 	.js-set-create-item-sidebar-diabled-input-date-dark-mode-false {
-		border-color: v.$mode-create-item-form-input-border-color-light;
 		background-color: v.$mode-create-item-form-input-disabled-background-color-light;
 		color: v.$mode-create-item-form-input-disabled-text-color-dark;
 		pointer-events: none;
 	}
 	.js-set-create-item-sidebar-diabled-input-date-dark-mode-true {
-		border-color: v.$mode-create-item-form-input-border-color-dark;
 		background-color: v.$mode-create-item-form-input-disabled-background-color-dark;
 		color: v.$mode-create-item-form-input-disabled-text-color-dark;
 		pointer-events: none;
+	}
+
+	// Light/Dark mode focus box shadow for CreateItemSidebar submit button
+	.js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-false {
+		&:focus {
+			box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-light;
+		}
+	}
+	.js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-true {
+		&:focus {
+			box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-dark;
+			-moz-box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-dark;
+			-webkit-box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-dark;
+		}
 	}
 
 	// Light/Dark mode border colors for list rows
@@ -211,13 +241,13 @@ body, */
 	// Light/Dark mode hover background colors for list rows
 	.js-set-list-row-hover-background-color-dark-mode-false {
 		&:hover,
-		&:active {
+		:active {
 			background-color: v.$mode-list-row-hover-background-color-light;
 		}
 	}
 	.js-set-list-row-hover-background-color-dark-mode-true {
 		&:hover,
-		&:active {
+		:active {
 			background-color: v.$mode-list-row-hover-background-color-dark;
 		}
 	}
@@ -260,14 +290,14 @@ body, */
 
 	// Light/Dark mode border, background, and text color for ItemViewTopBar options-button
 	.js-set-item-view-top-bar-options-button-clicked-border-background-text-color-dark-mode-false {
-		border-color: v.$mode-top-bar-border-color-button-light;
-		background-color: v.$mode-top-bar-background-color-button-light;
+		border-color: v.$mode-top-bar-button-border-color-light;
+		background-color: v.$mode-top-bar-button-background-color-light;
 		// Same as hover text color for more distinct icon-buttons
 		color: v.$mode-more-distinct-icon-button-hover-text-color-light;
 	}
 	.js-set-item-view-top-bar-options-button-clicked-border-background-text-color-dark-mode-true {
-		border-color: v.$mode-top-bar-border-color-button-dark;
-		background-color: v.$mode-top-bar-background-color-button-dark;
+		border-color: v.$mode-top-bar-button-border-color-dark;
+		background-color: v.$mode-top-bar-button-background-color-dark;
 		// Same as hover text color for more distinct icon-buttons
 		color: v.$mode-more-distinct-icon-button-hover-text-color-dark;
 	}
@@ -275,13 +305,13 @@ body, */
 	// Light/Dark mode hover background color for ItemViewTopBar options-dropdown-row
 	.js-set-item-view-top-bar-options-dropdown-row-hover-background-color-dark-mode-false {
 		&:hover,
-		&:active {
+		:active {
 			background-color: v.$mode-item-view-top-bar-options-dropdown-row-hover-background-color-light;
 		}
 	}
 	.js-set-item-view-top-bar-options-dropdown-row-hover-background-color-dark-mode-true {
 		&:hover,
-		&:active {
+		:active {
 			background-color: v.$mode-item-view-top-bar-options-dropdown-row-hover-background-color-dark;
 		}
 	}
@@ -313,7 +343,7 @@ body, */
 		background-color: v.$theme-teal-background-color-light;
 
 		&:hover,
-		&:active {
+		:active {
 			background-color: v.$theme-teal-background-color-dark;
 		}
 	}
@@ -321,7 +351,7 @@ body, */
 		background-color: v.$theme-blue-background-color-light;
 
 		&:hover,
-		&:active {
+		:active {
 			background-color: v.$theme-blue-background-color-dark;
 		}
 	}
