--- a/client/src/CSS/scss_partials/authentication/_registerLogin.scss
+++ b/client/src/CSS/scss_partials/authentication/_registerLogin.scss
@@ -89,7 +89,7 @@
 		outline: none;
 		border: 0;
 		border-radius: v.$base-buttton-border-radius;
-		background-color: v.$light-teal;
+		background-color: v.$teal-light-level-1;
 		padding: 10px;
 		width: 100%;
 		color: white;
@@ -97,8 +97,8 @@
 		cursor: pointer;
 
 		&:hover,
-		&:active {
-			background-color: v.$dark-teal;
+		:active {
+			background-color: v.$teal-dark-level-1;
 		}
 	}
 
