--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
@@ -22,7 +22,8 @@
 		margin-bottom: 20px;
 		border: v.$base-sidebar-border-width solid black;
 		border-top: none;
-		border-width: v.$base-sidebar-border-width - 1 v.$base-sidebar-border-width v.$base-sidebar-border-width 0;
+		border-width: v.$base-sidebar-border-width - 1 v.$base-sidebar-border-width
+			v.$base-sidebar-border-width 0;
 		height: v.$create-item-sidebar-height;
 		width: v.$create-item-sidebar-width;
 		text-align: center;
@@ -57,7 +58,7 @@
 
 	.backend-errors {
 		@include m.backend-error();
-		
+
 		font-size: v.$create-item-sidebar-label-font-size;
 	}
 
@@ -79,7 +80,8 @@
 		margin-top: v.$create-item-sidebar-text-input-margin-top;
 		margin-bottom: v.$edit-account-create-item-form-input-margin-bottom;
 		outline: none;
-		border: v.$form-input-text-base-border-width solid v.$mode-create-item-form-input-border-color-light;
+		border: v.$form-input-text-base-border-width solid
+			v.$mode-create-item-form-input-border-color-light;
 		border-radius: v.$form-input-border-radius;
 		box-sizing: border-box;
 		background: v.$mode-create-item-form-input-background-color-light;
@@ -87,6 +89,12 @@
 		width: 100%;
 		font-size: v.$item-form-text-input-font-size;
 		font-family: Arial, Helvetica, sans-serif;
+
+		&:focus {
+			box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+		}
 	}
 
 	.form__textarea {
@@ -99,7 +107,8 @@
 		margin-top: v.$create-item-sidebar-text-input-margin-top;
 		margin-bottom: v.$edit-account-create-item-form-input-margin-bottom;
 		outline: none;
-		border: v.$form-input-text-base-border-width solid v.$mode-create-item-form-input-border-color-light;
+		border: v.$form-input-text-base-border-width solid
+			v.$mode-create-item-form-input-border-color-light;
 		border-radius: v.$form-input-border-radius;
 		background: v.$mode-create-item-form-input-background-color-light;
 		padding: 4px v.$create-item-sidebar-padding 4px
@@ -109,6 +118,12 @@
 		font-size: v.$item-form-text-input-font-size;
 		line-height: v.$common-line-height;
 		font-family: Arial, Helvetica, sans-serif;
+
+		&:focus {
+			box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+		}
 	}
 
 	.form__group-container {
@@ -134,16 +149,29 @@
 		width: 97%;
 		// one pixel smaller than associated label
 		font-size: 13px;
+
+		&:focus {
+			box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+		}
 	}
 
 	.form__group-container__input-container__select {
 		margin-top: 2px;
 		margin-bottom: v.$edit-account-create-item-form-input-margin-bottom;
+		outline: none;
 		border: 1px solid gray;
 		background: v.$mode-create-item-form-input-background-color-light;
 		width: 100%;
 		// one pixel smaller than associated label
 		font-size: 13px;
+
+		&:focus {
+			box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-create-item-form-input-focus-box-shadow-color-light;
+		}
 	}
 
 	.form__submit {
@@ -162,5 +190,11 @@
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16px;
 		cursor: pointer;
+
+		&:focus {
+			box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-light;
+			-moz-box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-light;
+			-webkit-box-shadow: v.$mode-create-item-form-submit-button-focus-box-shadow-color-light;
+		}
 	}
 }
